[B] Fix: Remove all admins in get users request